# Eleventh

./: .gitignore  Cargo.toml  Dockerfile  README.md  deno.json  docker-compose.yml  init.sh  mise.toml  pyproject.toml  server.py  test_client.py  test_server.py  tune.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.project/: Requirements.md  Sessions.md  requirements.md  sesions.md
.project/goals/: README.md
claim/: __init__.py  __main__.py  api.py  cli.py
claim/cases/: __init__.py  stock.py
claim/model/: card.py
claim/service/: api.py  web.py
claim/token_ring/: model.py  token.py
client/: Cargo.toml
client/src/: lib.rs  main.rs  schemas.rs  services.rs  theme.rs
crdt/: stack.py
crdt/common/: __init__.py  clock.py  item.py  types.py
crdt/tests/: test_stack.py
decks/: __init__.py  __main__.py  api.py  cli.py
decks/service/: api.py  web.py
eleventh/: __main__.py  cli.ts  main.ts  uuid.ts
eleventh/cluster/: api.ts  mod.ts  models.ts  server.ts
eleventh/clusters/: README.md  __init__.py  plugin.py
eleventh/decks/: __main__.py  app.py  cluster.py  model.py  repo.py
eleventh/login/: __init__.py  model.py
eleventh/tests/: cluster_test.ts
faint/: Cargo.toml  Readme.md  cli.ts  deno.json  main.ts  utils.ts
faint/src/: main.rs
goals/08_21/: docker-compose.yml
node/: cli.py  model.py  peers.py  plugin.py  router.py
node/client/: broadcast.py
node/cluster/: __init__.py  model.py
plugins/cluster/: __init__.py  model.py  router.py
pubsub/: .gitignore  README.md
pubsub/config/: config.exs  test.exs
pubsub/test/: pubsub_test.exs
quickapi/: Cargo.toml  Readme.md  __init__.py  __main__.py  _router_spec.py  lib.py  router.py  tcp.py
quickapi/http/: body.py  response.py  server.py  version.py
quickapi/rtp/: __init__.py  _request_spec.py  body.py  (+8 more)
rewards/: __main__.py  api.py  cli.py
server/: Cargo.toml
server/src/: account.rs  lib.rs  main.rs  menu.rs  services.rs
server/src/account/: mod.rs  models.rs  repository.rs  routes.rs
server/src/deck/: mod.rs  models.rs  repository.rs  routes.rs
server/src/deck/services/: claim.rs
server/src/matches/: mod.rs  routes.rs  service.rs
server/src/matches/models/: matches.rs  teams.rs
server/src/matches/routes/: state.rs
server/src/ping/: mod.rs  routes.rs
server/src/reward/: mod.rs
server/src/shared/models/: cards.rs
server/tests/: account_routes.rs  claim.rs  manage_deck.rs  user_claims_deck.rs  user_manages_account.rs  user_manages_deck.rs  user_pings.rs  user_plays_match.rs
trade/: __init__.py  __main__.py  api.py  cli.py
(+132 files in other folders)
