[project]
name = "eleventh"
version = "0.1.0"
description = "A distributed card game inspired by Fifa and E-Football."
authors = [
    {name = "RickBarretto",email = "78623871+RickBarretto@users.noreply.github.com"}
]
license = {text = "MPL 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "attrs (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
