[project]
name = "eleventh"
version = "0.1.0"
description = "A distributed card game inspired by Fifa and E-Football."
authors = [
    {name = "RickBarretto",email = "78623871+RickBarretto@users.noreply.github.com"}
]
license = {text = "MPL 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "locust (>=2.41.5,<3.0.0)",
    "cyclopts (>=3.24.0,<4.0.0)",
    "retry (>=0.9.2,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["*/tests"]