[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
quickapi = { path = "../quickapi" }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
speculate = "0.1.2"
tokio = { version = "1.39", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
